# rmpca-rust

./: Cargo.toml  FREEBSD_SETUP.md  HANDOVER.md  INSTRUCTIONS.md  OFFLINE_PLAN.md  README.md  RouteMaster.toml.example  gnome-maps-rmpca.desktop  launch-gnome-maps.sh
.cargo/: config.toml
.zai/: settings.json
docs/: OFFLINE_GEOCODE_PLAN.md  offline-bundles.md  offline-mode.md
gnome-maps-main/data/: org.gnome.Maps.gschema.xml
gnome-maps-main/src/: cppOptimizer.js  cppRoute.js  cppView.js  mapSource.js  mapView.js  offline.js  org.gnome.Maps.src.gresource.xml.in  placeButtons.js  placeEntry.js  placeView.js  polygonSelector.js  routeView.js  routingDelegator.js  sendToDialog.js
scripts/: build-bundle.sh  check-no-network.sh
src/: config.rs  main.rs
src/backend/: http.rs  in_process.rs  mod.rs
src/commands/: bundle.rs  extract_overture.rs  mod.rs  optimize.rs  pipeline.rs  serve.rs
src/optimizer/: mod.rs
src/osm/: mod.rs  serve_parser.rs
tests/: offline_test.sh
