[package]
name = "rmpca"
version = "0.1.0"
edition = "2021"
description = "Enterprise-grade unified CLI for rmp.ca operations - Rust port"
license = "MIT"
authors = ["RouteMasterPro Team"]

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# HTTP client for jail communication
reqwest = { version = "0.11", features = ["json", "stream"] }

# JSON/GeoJSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24"

# Graph algorithms
petgraph = "0.6"

# Geospatial calculations
geo = "0.27"

# Logging with JSON support
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Environment variable configuration
envy = "0.4"

# Zero-copy graph serialization (for instant map loading)
rkyv = "0.7"  # Zero-copy deserialization
bincode = "1.3"   # Fallback serialization

# OSM PBF parsing for offline mode
osmpbfreader = "0.16"

# Property-based testing for algorithmic correctness (dev dependency)
proptest = "1.4"

# Date/time handling
chrono = "0.4"

# SHA256 hashing for bundle verification
sha2 = "0.10"

# Directory walking for bundle creation
walkdir = "2.4"

# Optional dependencies
[dependencies.dirs]
version = "5.0"
optional = true

[dev-dependencies]
# Property-based testing (also available in main for testing features)
proptest = "1.4"

[features]
default = []
lean4 = []  # Enable Lean 4 FFI integration (placeholder)
r2 = []     # Enable R2/PMTiles remote fetch (online-only)
network = ["r2"]  # Enable all network-dependent features

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "rmpca"
path = "src/main.rs"
